<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.ProfileFragment">
   <ImageView
        android:id="@+id/profileimage"
        android:layout_width="180dp"
        android:layout_height="200dp"
        android:layout_marginTop="26dp"
        android:padding="5dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/hvbajoria"
       android:contentDescription="@string/my_image" />

    <TextView
        android:id="@+id/txtProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/profileimage"
        android:text="@string/harshavardhan_bajoria"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:textColor="#000000"
        android:padding="10dp"/>

    <TextView
        android:id="@+id/profiledes"
        android:layout_width="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_height="wrap_content"
        android:text="@string/profile_description"
        android:textStyle="normal"
        android:textSize="16sp"
        android:textColor="#000000"
        android:padding="6dp"
        android:layout_below="@id/txtProfile"/>

    <TextView
        android:id="@+id/profileconnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/to_connect_with_him"
        android:textSize="17sp"
        android:textStyle="bold"
        android:padding="3dp"
        android:textColor="#370691"
        android:layout_below="@id/profiledes"/>

    <RelativeLayout
        android:id="@+id/profilelinkedin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_below="@id/profileconnect"
        android:padding="3dp">
        <ImageView
            android:id="@+id/linkedinlogo"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/linkedin"
            android:padding="3dp"
            android:contentDescription="@string/linkedin_image" />

        <TextView
            android:id="@+id/linkedin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/linkedin"
            android:textSize="18sp"
            android:padding="2dp"
            android:layout_toEndOf="@id/linkedinlogo"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/profilegithub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_below="@id/profilelinkedin"
        android:padding="3dp">
        <ImageView
            android:id="@+id/githublogo"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/github"
            android:padding="3dp"
            android:contentDescription="@string/github_image" />

        <TextView
            android:id="@+id/github"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/github"
            android:textSize="18sp"
            android:padding="2dp"
            android:layout_toEndOf="@id/githublogo"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/profileinstagram"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_below="@id/profilegithub"
        android:padding="3dp">
        <ImageView
            android:id="@+id/instagramlogo"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/instagram"
            android:padding="3dp"
            android:contentDescription="@string/instagram_image" />

        <TextView
            android:id="@+id/instagram"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instagram"
            android:textSize="18sp"
            android:padding="2dp"
            android:layout_toEndOf="@id/instagramlogo"/>

    </RelativeLayout>
</RelativeLayout>