<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.DescriptionActivity"
    android:background="#ffffff">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/toolbar"
        android:minHeight="?attr/actionBarSize"
        android:background="#2180C8"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/toolbar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:id="@+id/llContent"
                android:orientation="horizontal"
                android:weightSum="6">

                <ImageView
                    android:id="@+id/imgBookImage"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5"
                    android:src="@mipmap/ic_launcher"
                    android:scaleType="centerCrop"
                    android:padding="5dp"
                    android:contentDescription="@string/gives_book_image" />

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3.3" >
                    <TextView
                        android:id="@+id/txtBookName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/name_of_the_book"
                        android:padding="8dp"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="#000000" />

                    <TextView
                        android:id="@+id/txtBookAuthor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/name_of_the_author"
                        android:padding="5dp"
                        android:layout_below="@id/txtBookName"
                        android:textSize="15sp"
                        android:textStyle="italic"
                        android:textColor="#000000" />

                    <TextView
                        android:id="@+id/txtBookPrice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/rs_299"
                        android:padding="7dp"
                        android:layout_below="@id/txtBookAuthor"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:textColor="#357a38" />

                </RelativeLayout>

                <TextView
                    android:id="@+id/txtBookRating"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.2"
                    android:padding="4dp"
                    android:textSize="18sp"
                    android:textColor="#ffc828"
                    android:textStyle="bold"
                    android:text="@string/_4_5"
                    android:drawablePadding="4dp"
                    app:drawableLeftCompat="@drawable/ic_ratings" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/llContent">

                <TextView
                    android:id="@+id/txtAboutTheBookStatic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="9dp"
                    android:text="@string/about_the_book"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtBookDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txtAboutTheBookStatic"
                    android:layout_margin="2dp"
                    android:padding="6dp"
                    android:text="@string/hello_blank"
                    android:textColor="#000000"
                    android:textSize="13sp" />

            </RelativeLayout>

        </RelativeLayout>

    </ScrollView>

    <Button
        android:id="@+id/btnAddToFav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#EA6D29"
        android:text="@string/add_to_favourites"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:textSize="19sp"/>

    <RelativeLayout
        android:id="@+id/progressLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff" >

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />
    </RelativeLayout>

</RelativeLayout>